variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: ';' expected but 'var' found.
x var: Int = 0
  ^